Fix text alignment

--- a/scss/aboutPage.scss
+++ b/scss/aboutPage.scss
@@ -1,27 +1,12 @@
 @use 'colors';
 @use 'layout';
 
-#photo {
-  display: block;
-  object-position: 0 0;
-  width: 50%;
-  height: auto;
-  border-radius: 50%;
-  margin: 2% 4% 2% 2%;
-  float: left;
-  @media screen and (max-width: 900px) {
-    width: auto;
-    height: auto;
-    float: none;
-    margin: 0 auto 5% auto;
-  }
-}
-
 #about {
   padding: 0% 5%;
   box-sizing: content-box;
   justify-content: flex-start;
   align-items: center;
+  text-align: center;
 
   #bio {
     margin: 2rem 0;
@@ -51,6 +36,22 @@
     }
     table.table {
       margin-bottom: 0;
+    }
+  }
+
+  #photo {
+    display: block;
+    object-position: 0 0;
+    width: 50%;
+    height: auto;
+    border-radius: 50%;
+    margin: 2% 4% 2% 2%;
+    float: left;
+    @media screen and (max-width: 900px) {
+      width: auto;
+      height: auto;
+      float: none;
+      margin: 0 auto 5% auto;
     }
   }
 }
