--- a/scss/contactsPage.scss
+++ b/scss/contactsPage.scss
@@ -6,6 +6,8 @@
   justify-content: flex-start;
   position: relative;
   min-height: 25vh;
+  text-align: center;
+
   @media screen and (max-width: 900px) {
     min-height: 25vh;
   }
