--- a/scss/homePage.scss
+++ b/scss/homePage.scss
@@ -2,6 +2,7 @@
 
 #home {
   background-color: colors.$darkGray;
+  text-align: center;
 
   .dark-rectangle {
     background: black;
