--- a/scss/projectsPage.scss
+++ b/scss/projectsPage.scss
@@ -13,6 +13,11 @@
     justify-content: center;
   }
 
+  h2 {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   h3 {
     min-width: 30vw;
     margin: 1rem;
